Handlers swagger petstore
